ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'('", "';'", "')'", "'=>'", "'<states>'", 
                     "'{'", "'}'", "'<alphabet>'", "'<functions>'", "'<initial>'", 
                     "'<final>'", "'<tests>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SYM", "WS" ]

    RULE_sym = 0
    RULE_symList = 1
    RULE_functionItem = 2
    RULE_functionList = 3
    RULE_statesSection = 4
    RULE_alphabetSection = 5
    RULE_functionSection = 6
    RULE_initialSection = 7
    RULE_finalSection = 8
    RULE_testSection = 9
    RULE_testItem = 10
    RULE_testList = 11
    RULE_startRule = 12

    ruleNames =  [ "sym", "symList", "functionItem", "functionList", "statesSection", 
                   "alphabetSection", "functionSection", "initialSection", 
                   "finalSection", "testSection", "testItem", "testList", 
                   "startRule" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    SYM=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SymContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYM(self):
            return self.getToken(ExprParser.SYM, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_sym

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSym" ):
                listener.enterSym(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSym" ):
                listener.exitSym(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSym" ):
                return visitor.visitSym(self)
            else:
                return visitor.visitChildren(self)




    def sym(self):

        localctx = ExprParser.SymContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sym)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(ExprParser.SYM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SymListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sym(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.SymContext)
            else:
                return self.getTypedRuleContext(ExprParser.SymContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_symList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymList" ):
                listener.enterSymList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymList" ):
                listener.exitSymList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymList" ):
                return visitor.visitSymList(self)
            else:
                return visitor.visitChildren(self)




    def symList(self):

        localctx = ExprParser.SymListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_symList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.sym()
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 29
                self.match(ExprParser.T__0)
                self.state = 30
                self.sym()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sym(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.SymContext)
            else:
                return self.getTypedRuleContext(ExprParser.SymContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_functionItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionItem" ):
                listener.enterFunctionItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionItem" ):
                listener.exitFunctionItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionItem" ):
                return visitor.visitFunctionItem(self)
            else:
                return visitor.visitChildren(self)




    def functionItem(self):

        localctx = ExprParser.FunctionItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(ExprParser.T__1)
            self.state = 37
            self.sym()
            self.state = 38
            self.match(ExprParser.T__2)
            self.state = 39
            self.sym()
            self.state = 40
            self.match(ExprParser.T__3)
            self.state = 41
            self.match(ExprParser.T__4)
            self.state = 42
            self.sym()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.FunctionItemContext)
            else:
                return self.getTypedRuleContext(ExprParser.FunctionItemContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_functionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionList" ):
                listener.enterFunctionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionList" ):
                listener.exitFunctionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionList" ):
                return visitor.visitFunctionList(self)
            else:
                return visitor.visitChildren(self)




    def functionList(self):

        localctx = ExprParser.FunctionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.functionItem()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 45
                self.match(ExprParser.T__0)
                self.state = 46
                self.functionItem()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatesSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symList(self):
            return self.getTypedRuleContext(ExprParser.SymListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_statesSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatesSection" ):
                listener.enterStatesSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatesSection" ):
                listener.exitStatesSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatesSection" ):
                return visitor.visitStatesSection(self)
            else:
                return visitor.visitChildren(self)




    def statesSection(self):

        localctx = ExprParser.StatesSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statesSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(ExprParser.T__5)
            self.state = 53
            self.match(ExprParser.T__6)
            self.state = 54
            self.symList()
            self.state = 55
            self.match(ExprParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlphabetSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symList(self):
            return self.getTypedRuleContext(ExprParser.SymListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_alphabetSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlphabetSection" ):
                listener.enterAlphabetSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlphabetSection" ):
                listener.exitAlphabetSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlphabetSection" ):
                return visitor.visitAlphabetSection(self)
            else:
                return visitor.visitChildren(self)




    def alphabetSection(self):

        localctx = ExprParser.AlphabetSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_alphabetSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(ExprParser.T__8)
            self.state = 58
            self.match(ExprParser.T__6)
            self.state = 59
            self.symList()
            self.state = 60
            self.match(ExprParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionList(self):
            return self.getTypedRuleContext(ExprParser.FunctionListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_functionSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionSection" ):
                listener.enterFunctionSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionSection" ):
                listener.exitFunctionSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionSection" ):
                return visitor.visitFunctionSection(self)
            else:
                return visitor.visitChildren(self)




    def functionSection(self):

        localctx = ExprParser.FunctionSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(ExprParser.T__9)
            self.state = 63
            self.match(ExprParser.T__6)
            self.state = 64
            self.functionList()
            self.state = 65
            self.match(ExprParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sym(self):
            return self.getTypedRuleContext(ExprParser.SymContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_initialSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialSection" ):
                listener.enterInitialSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialSection" ):
                listener.exitInitialSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialSection" ):
                return visitor.visitInitialSection(self)
            else:
                return visitor.visitChildren(self)




    def initialSection(self):

        localctx = ExprParser.InitialSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initialSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(ExprParser.T__10)
            self.state = 68
            self.sym()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FinalSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symList(self):
            return self.getTypedRuleContext(ExprParser.SymListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_finalSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFinalSection" ):
                listener.enterFinalSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFinalSection" ):
                listener.exitFinalSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFinalSection" ):
                return visitor.visitFinalSection(self)
            else:
                return visitor.visitChildren(self)




    def finalSection(self):

        localctx = ExprParser.FinalSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_finalSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(ExprParser.T__11)
            self.state = 71
            self.match(ExprParser.T__6)
            self.state = 72
            self.symList()
            self.state = 73
            self.match(ExprParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testList(self):
            return self.getTypedRuleContext(ExprParser.TestListContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_testSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestSection" ):
                listener.enterTestSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestSection" ):
                listener.exitTestSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestSection" ):
                return visitor.visitTestSection(self)
            else:
                return visitor.visitChildren(self)




    def testSection(self):

        localctx = ExprParser.TestSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_testSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(ExprParser.T__12)
            self.state = 76
            self.match(ExprParser.T__6)
            self.state = 77
            self.testList()
            self.state = 78
            self.match(ExprParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sym(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.SymContext)
            else:
                return self.getTypedRuleContext(ExprParser.SymContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_testItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestItem" ):
                listener.enterTestItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestItem" ):
                listener.exitTestItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestItem" ):
                return visitor.visitTestItem(self)
            else:
                return visitor.visitChildren(self)




    def testItem(self):

        localctx = ExprParser.TestItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_testItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ExprParser.T__1)
            self.state = 81
            self.sym()
            self.state = 82
            self.match(ExprParser.T__2)
            self.state = 83
            self.sym()
            self.state = 84
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.TestItemContext)
            else:
                return self.getTypedRuleContext(ExprParser.TestItemContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_testList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestList" ):
                listener.enterTestList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestList" ):
                listener.exitTestList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestList" ):
                return visitor.visitTestList(self)
            else:
                return visitor.visitChildren(self)




    def testList(self):

        localctx = ExprParser.TestListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_testList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.testItem()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 87
                self.match(ExprParser.T__0)
                self.state = 88
                self.testItem()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statesSection(self):
            return self.getTypedRuleContext(ExprParser.StatesSectionContext,0)


        def alphabetSection(self):
            return self.getTypedRuleContext(ExprParser.AlphabetSectionContext,0)


        def functionSection(self):
            return self.getTypedRuleContext(ExprParser.FunctionSectionContext,0)


        def initialSection(self):
            return self.getTypedRuleContext(ExprParser.InitialSectionContext,0)


        def finalSection(self):
            return self.getTypedRuleContext(ExprParser.FinalSectionContext,0)


        def testSection(self):
            return self.getTypedRuleContext(ExprParser.TestSectionContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_startRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartRule" ):
                listener.enterStartRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartRule" ):
                listener.exitStartRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartRule" ):
                return visitor.visitStartRule(self)
            else:
                return visitor.visitChildren(self)




    def startRule(self):

        localctx = ExprParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_startRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.statesSection()
            self.state = 95
            self.alphabetSection()
            self.state = 96
            self.functionSection()
            self.state = 97
            self.initialSection()
            self.state = 98
            self.finalSection()
            self.state = 99
            self.testSection()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





